--- a/index.html
+++ b/index.html
@@ -2,23 +2,61 @@
 <html lang="ko">
     <head>
         <meta charset="UTF-8">
-        <title></title>
-        <link rel="icon" type="image/x-icon" href="">
+        <title>당근</title>
+        <link rel="icon" type="image/x-icon" href="assets/icon.ico">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
-        <meta property="og:title" content="">
-        <meta property="og:description" content="">
-        <meta property="og:image" content="">
+        <meta property="og:title" content="당신 근처의 당근">
+        <meta property="og:description" content="중고 거래부터 동네 정보까지, 이웃과 함께해요. 가깝고 따뜻한 당신의 근처를 만들어요.">
+        <meta property="og:image" content="localhost/assets/image.png">
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:title" content="">
-        <meta name="twitter:description" content="">
-        <meta name="twitter:image" content="">
+        <meta name="twitter:title" content="당신 근처의 당근">
+        <meta name="twitter:description" content="중고 거래부터 동네 정보까지, 이웃과 함께해요. 가깝고 따뜻한 당신의 근처를 만들어요.">
+        <meta name="twitter:image" content="localhost/assets/image.png">
     </head>
     <body>
         <header>
-
+            <div class='header-container'>
+                <a class='logo' href="/index.html">
+                    <span>
+                        <img src='assets/logo.svg' alt0="당근 로고"/>
+                    </span>
+                </a>
+                <nav class="menu-container">
+                    <ul>
+                        <li>
+                            <a href="" class="menu-text">중고업체</a>
+                        </li>
+                        <li>
+                            <a href="" class="menu-text">동네업체</a>
+                        </li>
+                        <li>
+                            <a href="" class="menu-text">알바</a>
+                        </li>
+                        <li>
+                            <a href="" class="menu-text">부동산 직거래</a>
+                        </li>
+                        <li>
+                            <a href="" class="menu-text">중고차 직거래</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="search-container">
+                    <span>
+                        <form class="search-form">
+                            <input type="search" class="search-input" placeholder="물품이나 동네를 검색해보세요.">
+                        </form>
+                    </span>
+                    <span>
+                        <button tupe="button" class="chat-button">
+                            채팅하기
+                        </button>
+                    </span>
+                </div>
+            </div>
         </header>
         <main>
+
 
         </main>
     </body>
