--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <nav class="menu-container">
                     <ul>
                         <li>
-                            <a href="" class="menu-text">중고업체</a>
+                            <a href="" class="menu-text">중고거래</a>
                         </li>
                         <li>
                             <a href="" class="menu-text">동네업체</a>
@@ -56,7 +56,6 @@
             </div>
         </header>
         <main>
-
 
         </main>
     </body>
