--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                 <nav class="menu-container">
                     <ul>
                         <li>
-                            <a href="/fleamarket.html" class="menu-text">중고거래</a>
+                            <a href="/Daangn/fleamarket.html" class="menu-text">중고거래</a>
                         </li>
                         <li>
-                            <a href="/fleamarket.html" class="menu-text">동네업체</a>
+                            <a href="/Daangn/fleamarket.html" class="menu-text">동네업체</a>
                         </li>
                         <li>
-                            <a href="/fleamarket.html" class="menu-text">알바</a>
+                            <a href="/Daangn/fleamarket.html" class="menu-text">알바</a>
                         </li>
                         <li>
-                            <a href="/fleamarket.html" class="menu-text">부동산 직거래</a>
+                            <a href="/Daangn/fleamarket.html" class="menu-text">부동산 직거래</a>
                         </li>
                         <li>
-                            <a href="/fleamarket.html" class="menu-text">중고차 직거래</a>
+                            <a href="/Daangn/fleamarket.html" class="menu-text">중고차 직거래</a>
                         </li>
                     </ul>
                 </nav>
